# hackathon-sber-teh

./: README.md  pyproject.toml
hackathon/: fitness.py  main_pipeline.py  prepare_pipeline.py  sber_task.xml  scheduled.csv  skills_resource_optimizer.py  tuning.py  work_time_estimator.py  works_info.csv  xml_parser.py
